src/test/deca/context/invalid/lvalue_class.deca
// Description :
//    Test d'une lvalue classe 
//
// Résultats:
//    Ligne 17 : 
//
// Historique:
//    créé le 22/01/2017

class A {
    int x;
}
class B {
    int x;
}
{
    A = B;
}